kubernetes-networks/web-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web 
spec:
  replicas: 3
  selector: 
    matchLabels: 
      app: web 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
      maxSurge: 100%  
  template: 
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: 445039/hw1:latest
        readinessProbe: 
          httpGet: 
            path: /index.html 
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
      volumes:
      - name: app
        emptyDir: {}
