kubernetes-networks/web-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app: web
spec:
  containers:
  - name: web
    image: 445039/hw1:latest
    # --- BEGIN ---
    readinessProbe: # Добавим проверку готовности
      httpGet: # веб-сервера отдавать
        path: /index.html # контент
        port: 80
    # --- END ---
    livenessProbe:
      tcpSocket: { port: 8000 }
  volumes:
  - name: app
    emptyDir: {}
